--- a/todo with redux/index.css
+++ b/todo with redux/index.css
@@ -1,25 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.2.0/redux.js"></script>
-    <title>Redux Todo App Using Redux</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <h1>TODO</h1>
-      <input class="input-box" type="text" placeholder="Enter todo...." />
-      <ul></ul>
-    </div>
-    <script src="./index.js"></script>
-  </body>
-</html>
+body {
+  text-align: center;
+  line-height: 1.5;
+  background-color: lightcyan;
+}
+
+.container {
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 32px;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.input-box {
+  width: 100%;
+  padding: 0.2rem 0.5rem;
+  font-family: 'Ms Madi', cursive;
+  outline: none;
+  font-size: 1.5rem;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.capitalize {
+  text-transform: capitalize;
+}
